# scrumAI

./: .env  .gitignore  ENVIRONMENT_SETUP.md  LICENSE  README.md  WHISPER_INTEGRATION.md  client_example.html  codebase_analysis.md  config.env  debug-auth.html  index.html  main.py  meetingnotes_2025-09-14T08-44-59-295Z.txt  meetingnotes_2025-09-14T08-47-47-141Z.txt  meetingnotes_2025-09-14T08-49-08-891Z.txt  meetingnotes_2025-09-14T08-49-42-449Z.txt  meetingnotes_2025-09-14T08-50-09-832Z.txt  meetingnotes_2025-09-14T09-04-00-968Z.txt  meetingnotes_2025-09-14T09-13-01-441Z.txt  meetingnotes_2025-09-14T09-14-53-434Z.txt  meetingnotes_2025-09-14T09-30-37-781Z.txt  meetingnotes_2025-09-14T09-33-18-289Z.txt  meetingnotes_2025-09-14T09-37-03-480Z.txt  meetingnotes_2025-09-14T09-42-10-651Z.txt  meetingnotes_2025-09-14T11-34-49-983Z.txt  meetingnotes_2025-09-14T12-29-57-555Z.txt  meetingnotes_2025-09-14T12-31-12-563Z.txt  meetingnotes_2025-09-14T13-26-56-089Z.txt  meetingnotes_2025-09-14T15-01-14-612Z.txt  meetingnotes_2025-09-14T15-04-27-507Z.txt  meetingnotes_2025-09-14T16-05-55-698Z.txt  meetingnotes_2025-09-14T16-42-58-513Z.txt  package-lock.json  package.json  pyproject.toml  setup_whisper.bat  test-modal.html  test-supabase.html  test_websocket.py  websocket.py
.claude/: settings.local.json
app/: config.py  models.py
cursor_rules/: ai_integration_rules.md  technical_implementation_rules.md  ui_ux_rules.md
whisper/: LiveTranscriber_standalone.py  config.yaml  meeting_transcriber.py  requirements.txt  requirements_minimal.txt  standalone_model.py  standalone_whisper.py  (+2 more)
(+26 files in other folders)
